# risogroup-website

./: .gitignore  CLAUDE.md  CNAME  README.md  app.py  build.py  build.sh  deploy.py  deploy.sh  index.html  local_setup.py  models.py  pyproject.toml  replit_zip_error_log.txt  robots.txt  sitemap.xml
.github/workflows/: claude-code-review.yml
content/projects/: legal-data-warehouse.html  merchant-metrics-dashboard.html  predictive-ltv-model.html
content/sections/: capabilities.html  talent.html
deploy_1734897003/: README.md  index.html
deploy_1734897003/consulting/: legal-data-warehouse.html
deploy_1734897003/css/: style.css
engagements/: data-warehouse.html  embedded-dashboards.html  predictive-ltv.html
insights/: Blog Post - Analytics Tools .docx  ai-companies-hiring-one-third-fewer-pms.html  ai-company-base-salaries.html  bi-tool-adoption-jan-2026.html  claude-code-hn.html  clickhouse-adoption.html  data-insight-template.html  data-role-hiring.html  data-warehouse-goes-mainstream.html  hiring-pulse-q1-2026.html  index.html  llm-etl-pricing.html  new-orleans-king-cake-searches.html  posthog-product-analytics.html  sample-article.html  template.html  why-we-havent-seen-stripe-sized-analytics.html
insights/css/: insights.css
insights/includes/: full_run_table.html
insights/js/: lightbox.js
instance/: riso.db
projects/: agentic-data-stack.html  claude-cost.html  granola-to-markdown.html  index.html  metabase-snapshot.html  nichemerch.html
templates/: base.html  case_study.html  contact.html  project_detail.html
tests/: claude-cost.ui.test.mjs
(+12 files in other folders)
