[project]
name = "repl-nix-risodatadrive"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "trafilatura>=2.0.0",
    "python-slugify>=8.0.4",
    "slugify>=0.0.1",
    "werkzeug>=3.1.3",
    "oauthlib>=3.2.2",
    "frozen-flask>=1.0.2",
    "flask-mail>=0.10.0",
]
